# navbe_ai_v1

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.cursor/plans/: sprint0-scaffold.md  sprint1-event-bus.md  sprint10-connectors-envs.md  sprint11-run-step-timings.md  sprint12-live-run-animation-agent-notify-shadcn.md  sprint2-mvp-a.md  sprint3-control-ui.md  sprint4-mvp-b.md  sprint5-daily-email-report.md  sprint6-control-ui-cockpit.md  sprint7-live-process-ui.md  sprint8-runs-first-ux.md  sprint9-workflows-crud.md
.cursor/skills/navbe-control-ui/: SKILL.md
.cursor/skills/navbe-event-bus/: SKILL.md
.cursor/skills/navbe-langfuse-sync/: SKILL.md
.cursor/skills/navbe-scaffold/: SKILL.md
.cursor/skills/navbe-trace-replay/: SKILL.md
apps/cli/: pyproject.toml
apps/cli/navbe_cli/: __init__.py  main.py
apps/web/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  statusColors.ts
apps/web/src/api/: client.ts  sse.test.ts  sse.ts
apps/web/src/components/: HealthBar.tsx  LiveRunsStrip.tsx  ProcessSelector.tsx  RunDetailSheet.tsx  RunMetrics.tsx  StatusBadge.tsx  WorkflowSelector.tsx  statusBadge.test.ts
apps/web/src/components/catalog/: ConnectorCard.tsx  DestinationCard.tsx  DetailDrawer.tsx
apps/web/src/components/connectors/: DestinationsPanel.tsx  SourcesPanel.tsx
apps/web/src/components/dag/: NavbeFlow.tsx  NodeSidePanel.tsx  layout.ts  nodes.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  (+7 more)
apps/web/src/lib/: formatDuration.ts
apps/web/src/pages/: CatalogPage.tsx  ConnectorsPage.tsx  DagPage.tsx  ProcessesPage.tsx  ReplaysPage.tsx  ReportsPage.tsx  RunsPage.tsx  SettingsPage.tsx  WorkflowsPage.tsx
apps/web/src/store/: dagStore.test.ts  dagStore.ts  liveRunStore.ts  processStore.ts  workflowStore.ts
