[project]
name = "navbe-cli"
version = "0.1.0"
description = "navbe CLI entrypoint (daemon, version)"
requires-python = ">=3.12"
dependencies = [
    "navbe-api",
    "typer>=0.15",
    "uvicorn[standard]>=0.49",
]

[project.scripts]
navbe = "navbe_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["navbe_cli"]
